opam-version: "2.0"
version: "1.0"
maintainer: "lord@crocodile.org"
authors: ["Vadim Zaliva"]
homepage: "https://github.com/vzaliva/fah-status"
bug-reports: "https://github.com/vzaliva/fah-status/issues"
dev-repo: "https://github.com/vzaliva/fah-status.git"
license: "MIT"
synopsis: "Folding@Home command line status monitor"
description: "Folding@Home command line status monitor"
doc: "https://github.com/vzaliva/fah-status"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.0"}
  "ocamlnet"
  "yojson"
  "ocaml"
  "lambda-term"
  "ppx_deriving"
]
